jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - image: jenkins/jenkins
          name: jenkins
          ports:
            - containerPort: 50000
              name: jenkins
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: jenkins-persistent-storage
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-persistent-storage
          persistentVolumeClaim:
            claimName: jenkins
