jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jenkins
spec:
  rules:
   - host: jenkins.lesquerra.cat
     http:
       paths:  
        - backend:
            serviceName: jenkins
            servicePort: 8080
